--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bayoutubevid",
   "version": "1.0.0",
   "description": "project",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +13,8 @@
     "express"
   ],
   "author": "miskogepa",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
