feat: implement MongoDB connection and update server initialization

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 8000
 
 CORS_ORIGIN=* # Allow all origins for CORS
+
+MONGO_URI = mongodb+srv://miskogepa:Radioamater3@cluster0.8obvesh.mongodb.net
